arm tested again. add timeout of 10min to each test for tests in slow emulated Qemu VMs.